--- a/package.json
+++ b/package.json
@@ -68,8 +68,7 @@
     "tailwindcss-intersect": "^2.2.0",
     "vaul": "^1.1.2",
     "video-react": "^0.16.0",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.11"
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@biomejs/biome": "2.3.4",
