--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,17 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
+  "redirects": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/sitemap_index.xml",
+      "permanent": true
+    },
+    {
+      "source": "/sitemap-index.xml",
+      "destination": "/sitemap_index.xml",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     {
       "source": "/((?!api|_vercel|.*\\..*).*)",
@@ -8,14 +20,14 @@
   ],
   "headers": [
     {
-      "source": "/sitemap.xml",
+      "source": "/sitemap_index.xml",
       "headers": [
         { "key": "Content-Type", "value": "application/xml; charset=utf-8" },
         { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
       ]
     },
     {
-      "source": "/sitemap-index.xml",
+      "source": "/sitemap_pages.xml",
       "headers": [
         { "key": "Content-Type", "value": "application/xml; charset=utf-8" },
         { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
