--- a/vercel.json
+++ b/vercel.json
@@ -2,17 +2,41 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "redirects": [
     {
-      "source": "/sitemap.xml",
-      "destination": "/sitemap_index.xml",
+      "source": "/sitemap_index.xml",
+      "destination": "/sitemap.xml",
       "permanent": true
     },
     {
       "source": "/sitemap-index.xml",
-      "destination": "/sitemap_index.xml",
+      "destination": "/sitemap.xml",
       "permanent": true
     }
   ],
   "rewrites": [
+    {
+      "source": "/sitemap.xml",
+      "destination": "/api/sitemap/index"
+    },
+    {
+      "source": "/sitemap-pages.xml",
+      "destination": "/api/sitemap/pages"
+    },
+    {
+      "source": "/sitemap-lessons.xml",
+      "destination": "/api/sitemap/lessons"
+    },
+    {
+      "source": "/sitemap-blog.xml",
+      "destination": "/api/sitemap/blog"
+    },
+    {
+      "source": "/sitemap-categories.xml",
+      "destination": "/api/sitemap/categories"
+    },
+    {
+      "source": "/sitemap-users.xml",
+      "destination": "/api/sitemap/users"
+    },
     {
       "source": "/((?!api|_vercel|.*\\..*).*)",
       "destination": "/index.html"
@@ -20,17 +44,45 @@
   ],
   "headers": [
     {
-      "source": "/sitemap_index.xml",
+      "source": "/sitemap.xml",
       "headers": [
         { "key": "Content-Type", "value": "application/xml; charset=utf-8" },
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+        { "key": "Cache-Control", "value": "public, s-maxage=3600, stale-while-revalidate=86400" }
       ]
     },
     {
-      "source": "/sitemap_pages.xml",
+      "source": "/sitemap-pages.xml",
       "headers": [
         { "key": "Content-Type", "value": "application/xml; charset=utf-8" },
-        { "key": "Cache-Control", "value": "public, max-age=0, must-revalidate" }
+        { "key": "Cache-Control", "value": "public, s-maxage=3600, stale-while-revalidate=86400" }
+      ]
+    },
+    {
+      "source": "/sitemap-lessons.xml",
+      "headers": [
+        { "key": "Content-Type", "value": "application/xml; charset=utf-8" },
+        { "key": "Cache-Control", "value": "public, s-maxage=3600, stale-while-revalidate=86400" }
+      ]
+    },
+    {
+      "source": "/sitemap-blog.xml",
+      "headers": [
+        { "key": "Content-Type", "value": "application/xml; charset=utf-8" },
+        { "key": "Cache-Control", "value": "public, s-maxage=3600, stale-while-revalidate=86400" }
+      ]
+    },
+    {
+      "source": "/sitemap-categories.xml",
+      "headers": [
+        { "key": "Content-Type", "value": "application/xml; charset=utf-8" },
+        { "key": "Cache-Control", "value": "public, s-maxage=3600, stale-while-revalidate=86400" }
+      ]
+    },
+    {
+      "source": "/sitemap-users.xml",
+      "headers": [
+        { "key": "Content-Type", "value": "application/xml; charset=utf-8" },
+        { "key": "Cache-Control", "value": "public, s-maxage=3600, stale-while-revalidate=86400" }
       ]
     },
     {
