fix: serve dynamic robots.txt with correct sitemap host

--- a/vercel.json
+++ b/vercel.json
@@ -38,6 +38,10 @@
       "destination": "/api/sitemap/users"
     },
     {
+      "source": "/robots.txt",
+      "destination": "/api/robots"
+    },
+    {
       "source": "/((?!api|_vercel|.*\\..*).*)",
       "destination": "/index.html"
     }
