Add lesson slug routing, UUID redirects, and mobile hero alignment

--- a/vercel.json
+++ b/vercel.json
@@ -42,6 +42,10 @@
       "destination": "/api/robots"
     },
     {
+      "source": "/lesson/:id([0-9a-fA-F]{8}-[0-9a-fA-F]{4}-[1-8][0-9a-fA-F]{3}-[89abAB][0-9a-fA-F]{3}-[0-9a-fA-F]{12})",
+      "destination": "/api/lesson-redirect?id=:id"
+    },
+    {
       "source": "/((?!api|_vercel|.*\\..*).*)",
       "destination": "/index.html"
     }
