--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "miaoda-sc-plugin": "1.0.56",
     "motion": "^12.23.25",
     "next-themes": "^0.4.6",
+    "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
     "react": "^18.0.0",
     "react-day-picker": "^8.10.1",
